--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ quantstats = "^0.0.64"
 pandas = "^2.3.0"
 matplotlib = "^3.8.0"
 numpy = "^1.24.0"
+ipython = "^9.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
