--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,12 +3,7 @@ maxUploadSize = 200
 maxMessageSize = 200
 
 [theme]
-base = "light"
-primaryColor = "#FF6B6B"
-backgroundColor = "#FFFFFF"
-secondaryBackgroundColor = "#F0F2F6"
-textColor = "#262730"
-font = "monospace"
+base = "dark"
 
 [browser]
 gatherUsageStats = false
