--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pandas = "^2.3.0"
 matplotlib = "^3.8.0"
 numpy = "^1.24.0"
 ipython = "^9.4.0"
+quantstats-lumi = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
